sources = files(
    'ctx.c',
    'event.c',
    'stream_table.c',
    'tcp_ofo.c',
    'tcp_stream.c',
    'tcp_rxtx.c',
    'udp_stream.c',
    'udp_rxtx.c'
)
headers = files(
    'tle_ctx.h',
    'tle_event.h',
    'tle_tcp.h',
    'tle_udp.h',
)

deps += ['tle_misc', 'tle_memtank', 'tle_dring', 'tle_timer', 'dpdk']